# sbt-aws

./: .eslintrc.json  .gitattributes  .gitignore  .mise.toml  .npmignore  .prettierrc  .projenrc.ts  .pylintrc  404.html  API.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  PR_DESCRIPTION.md  README.md  RELEASE.md  SBT-Flow.drawio  SECURITY.md  cdk.json  index.html  index.md  llms-full.txt  llms.txt  lunr-index-1725655569044.json  lunr-index-1727477508637.json  lunr-index-1727542940444.json  lunr-index-1729698974384.json  lunr-index-1729700110744.json  lunr-index-1730853532283.json  lunr-index-1730913131128.json  lunr-index-1731219512374.json  lunr-index-1731284622987.json  lunr-index-1731346435581.json  lunr-index-1733864160964.json  lunr-index-1734397455600.json  lunr-index-1736809732719.json  lunr-index-1737782944918.json  markdown-page.html  package-lock.json  package.json  (+15 more)
.github/: dependabot.yml  pull_request_template.md
.projen/: deps.json  files.json  tasks.json
docs/: interfaces.html  interfaces.md
projenrc/: constants.ts  run-tests-workflow.ts
scripts/: generate-credentials.sh  github-actions-run-tests-script.sh  parse-password.py  run-basic-queries.sh  sbt-aws.sh  security-check.sh  send-kinesis-data.sh  test-sbt-aws-py.sh  test-sbt-aws.sh  test-sbt.sh  test-token-vending-machine.sh
scripts/sbt-aws-cli/: README.md  pyproject.toml
scripts/sbt-aws-cli/sbt_aws_cli/: main.py
src/: index.ts
test/: cognito-auth.test.ts  control-plane.test.ts  core-app-plane.test.ts  event-manager.test.ts  utils.test.ts
website/: docusaurus.config.ts  package-lock.json  (+2 more)
(+487 files in other folders)
